2006-12-11  Aidan Kehoe  <kehoea@parhasard.net>

	* glyphs-eimage.c (png_warning_func): 
	* glyphs-eimage.c (png_instantiate): 
	* glyphs-eimage.c (tiff_warning_func): 
	Decode external binary data as such before passing it to 
	warn_when_safe().  

2006-12-09  Vin Shelton  <acs@xemacs.org>

	* sound.c (init_native_sound): Fix typo in call to GTK_DEVICE
	macro.

2006-12-07  Vin Shelton  <acs@xemacs.org>

	* fileio.c: Added cast to qxeGetNamedSecurityInfofix call to fix
	VC6 build.

2006-11-24  Benson Margulies  <benson@dchbk.us>

	* fileio.c: Change check_writable to use the full Win32 mechanism
	to check access.
	* intl-auto-encap-win32.c: Add GetNamedSecurityInfo
	* intl-auto-encap-win32.h: Add GetNamedSecurityInfo
	* intl-auto-encap-win32.h Add qxeGetNamedSecurityInfo.
	* intl-encap-win32.c: Add aclapi.h : GetNamedSecurityInfo
	* syswindows.h: Add aclapi.h

2006-12-06  Aidan Kehoe  <kehoea@parhasard.net>

	* text.c (Fsplit_char):
	Make split-char available on non-Mule builds, taking out a
	superfluous call to get-charset to make that possible. 

2006-11-30  Mike Sperber  <mike@xemacs.org>

	* fileio.c (Finsert_file_contents_internal): Don't call the
	file-name handler for `insert-file-contents' from here, which is
	too late.  Instead, do it from Lisp.SSper

2006-11-29  Dr. Volker Zell  <Dr.Volker.Zell@oracle.com>

	* sysdir.h: Revert workaround missing d_ino field from 'struct
	dirent' for Cygwin as it's back in again.

2006-11-29  Aidan Kehoe  <kehoea@parhasard.net>

	* mule-charset.c (Fset_charset_registries):
	Add an optional argument FORCE, to allow specifying badly-formed
	CHARSET_REGISTRY-CHARSET_ENCODING combinations. Re-enables the
	sort of hacks described in 96wt67fa3f.fsf@mo.msk.ru from Ilya
	Golubev. 

2006-11-29  Aidan Kehoe  <kehoea@parhasard.net>

	* sound.c (init_native_sound):
	Only X11 and GTK devices can possibly not be on the console of the
	associated machine. Fixes a crash when init_native_sound is called
	on a msprinter device. 
