@@ -1,5 +1,14 @@
 2006-12-11  Aidan Kehoe  <kehoea@parhasard.net>
 
+	* event-tty.c: 
+	* event-tty.c (emacs_tty_event_pending_p): 
+	* event-tty.c (reinit_vars_of_event_tty): 
+	Pay attention to the dispatch event queue, and input pending 
+	signals in emacs_tty_event_pending_p. Makes pure TTY builds more 
+	responsive.  
+
+2006-12-11  Aidan Kehoe  <kehoea@parhasard.net>
+
 	* glyphs-eimage.c (png_warning_func): 
 	* glyphs-eimage.c (png_instantiate): 
 	* glyphs-eimage.c (tiff_warning_func): 
